# Modern-CPP

./: .gitignore
1_Bash_and_Build_Systems/hello_world/: a.out  hello_world.cpp
1_Bash_and_Build_Systems/homework_1/task_1/: commands.sh
1_Bash_and_Build_Systems/homework_1/task_2/: build.sh
1_Bash_and_Build_Systems/my_first_library/: tools.cpp
2_Core_C++/homework_2/task_1/: build.sh  guessing_game.cpp
2_Core_C++/homework_2/task_2/: CMakeLists.txt  input_params.cpp
3_C++_Functions/homework_3/: CMakeLists.txt  build.sh
3_C++_Functions/homework_3/src/: create_image_browser.cpp  image_browser.cpp
4_The_C++_STL_Library/homework_4/include/: homework_4.h
5_IO_Files_and_Class_Basics/homework_5/src/: serialize.cpp
6_C++_Classes/homework_6/include/: image.hpp
6_C++_Classes/homework_6/src/: image.cpp  io_tools.cpp
6_C++_Classes/homework_6/tests/: CMakeLists.txt
6_C++_Classes/homework_6/tests/data/: dummy_file.pgm
7_Object_Oriented_Design/homework_7/include/: bow_dictionary.hpp  convert_dataset.hpp  homework_7.h  kmeans.hpp
7_Object_Oriented_Design/homework_7/src/: bow_dictionary.cpp  convert_dataset.cpp  kmeans.cpp  serialize.cpp
7_Object_Oriented_Design/homework_7/tests/: CMakeLists.txt
8_Memory_Management/homework_8/task_1/: stack_limit.cpp
8_Memory_Management/homework_8/task_2/include/: color_image.hpp  homework_8.h  strategies.hpp
8_Memory_Management/homework_8/task_2/src/: color_image.cpp  strategies.cpp
8_Memory_Management/homework_8/task_2/tests/: CMakeLists.txt
9_Templates/homework_9/include/: bovw_dictionary.hpp  homework_9.h  kmeans.hpp
9_Templates/homework_9/src/: bovw_dictionary.cpp  kmeans.cpp
9_Templates/homework_9/tests/: CMakeLists.txt
BashBuildSystems/homework_1/task_2/: CMakeLists.txt  install.sh
BashBuildSystems/my_first_library/: CMakeLists.txt  main
C++Functions/homework_3/src/: html_writer.cpp
CoreC++/homework_2/task_1/: CMakeLists.txt
CoreC++/homework_2/task_2/: build.sh
IOFilesAndClassBasics/homework_5/src/: convert_dataset.cpp
IOFilesAndClassBasics/homework_5/tests/: CMakeLists.txt  sifts_internal.cpp
TheC++STLLibrary/homework_4/include/: ipb_algorithms.hpp  named_vector.hpp
TheC++STLLibrary/homework_4/src/: ipb_algorithms.cpp  named_vector.cpp
TheC++STLLibrary/homework_4/tests/: CMakeLists.txt
